--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,14 +10,16 @@
 			crossorigin='anonymous'
 		/>
 		<link rel='stylesheet' href='/stylesheets/style.css' />
-		<title>Code Crazy</title>
+		<title class='title'>Code Crazy</title>
 	</head>
 
 	<body>
 		<header>
-			<h1>
-				<a href='/'>Code Crazy</a>
-			</h1>
+			<div class='navbar bg-dark'>
+				<h1 class='navbar-brand'>
+					<a href='/' class='logo'>Code Crazy</a>
+				</h1>
+			</div>
 		</header>
 		<main>
 			{{{body}}}
