--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,17 @@
-<ol>
-    {{#each posts as |post|}}
-    <li>
-        {{> post-info post}}
-    </li>
-    {{/each}}
-</ol>
+<section>
+	{{#each posts as |post|}}
+		<div class='container'>
+			<div class='card mt-3'>
+				<div class='card-body'>
+					<h2 class='card-title'><a
+							href='/api/posts/{{post.id}}'
+						>{{post.title}}</a></h2>
+					<div class='card-text d-flex flex-row justify-content-between'>
+						<p class='card-text'>{{post.post_text}}</p>
+						<p class='card-text'>created on {{post.created_at}}</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	{{/each}}
+</section>
