added more styling

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,3 +8,18 @@
 	color: whitesmoke;
 	opacity: 70%;
 }
+
+.card {
+	background-color: burlywood;
+}
+
+.card-title {
+	font-size: 35px;
+}
+.post-info {
+	font-size: small;
+}
+
+.post-created {
+	margin-right: 15px;
+}
