--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,19 +1,5 @@
 <section>
 	{{#each posts as |post|}}
-		<div class='container'>
-			<div class='card bg- mt-3'>
-				<div class='card-body'>
-					<h2 class='card-title'><a
-							href='/api/posts/{{post.id}}'
-						>{{post.title}}</a></h2>
-					<p class='card-text'>{{post.post_text}}</p>
-					<div class='card-text d-flex flex-row justify-content-end post-info'>
-						<p class='card-text post-created'>created on {{post.created_at}}</p>
-						<p class='card-text'><a href='/'>{{post.comments.length}}
-								comment(s)</a></p>
-					</div>
-				</div>
-			</div>
-		</div>
+		{{> post-info post}}
 	{{/each}}
 </section>
