--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,6 +19,10 @@
 				<h1 class='navbar-brand'>
 					<a href='/' class='logo'>Code Crazy</a>
 				</h1>
+				<div class='d-flex flew-row'>
+					<h2 class='nav-item'><a href='/signup'>Signup</a></h2>
+					<h2 class='nav-item'><a href='/'>Login</a></h2>
+				</div>
 			</div>
 		</header>
 		<main>
