--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,7 +21,7 @@
 				</h1>
 				<div class='d-flex flew-row'>
 					<h2 class='nav-item'><a href='/signup'>Signup</a></h2>
-					<h2 class='nav-item'><a href='/'>Login</a></h2>
+					<h2 class='nav-item'><a href='/login'>Login</a></h2>
 				</div>
 			</div>
 		</header>
