--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,7 +20,7 @@
 					<a href='/' class='logo'>Code Crazy</a>
 				</h1>
 				<div class='d-flex flew-row'>
-					<h2 class='nav-item'><a href='/signup'>Signup</a></h2>
+					<h2 class='nav-item'><a href='/signup'>Sign Up</a></h2>
 					<h2 class='nav-item'><a href='/login'>Login</a></h2>
 				</div>
 			</div>
