--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -7,4 +7,5 @@
 		<label for='password-login'>Password</label>
 		<input type='password' id='password-login' />
 	</div>
+	<button type='submit'>Sign Up</button>
 </form>
