--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -11,4 +11,5 @@
 		<label for='password-signup'>Password</label>
 		<input type='password' id='password-signup' />
 	</div>
+	<button type='submit'>Sign Up</button>
 </form>
