added signup post method

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -7,6 +7,6 @@
 		<label for='password-login'>Password</label>
 		<input type='password' id='password-login' />
 	</div>
-	<button type='submit'>Sign Up</button>
+	<button type='submit'>Log in</button>
 </form>
 <script src='/javascript/login.js'></script>
