added logout nav

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,6 +22,7 @@
 				<div class='d-flex flew-row'>
 					<h2 class='nav-item'><a href='/signup'>Sign Up</a></h2>
 					<h2 class='nav-item'><a href='/login'>Login</a></h2>
+					<h2 class='nav-item'><a href='/logout'>Log Out</a></h2>
 				</div>
 			</div>
 		</header>
