--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,13 +22,14 @@
 				<div class='d-flex flew-row'>
 					<h2 class='nav-item'><a href='/signup'>Sign Up</a></h2>
 					<h2 class='nav-item'><a href='/login'>Login</a></h2>
-					<h2 class='nav-item'><a href='/logout'>Log Out</a></h2>
+					<h2 class='nav-item'><btn id='log-out'>Log Out</btn></h2>
 				</div>
 			</div>
 		</header>
 		<main>
 			{{{body}}}
 		</main>
+		<script src='/javascript/logout.js'></script>
 	</body>
 
 </html>
