different options for loggIn

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,9 +20,14 @@
 					<a href='/' class='logo'>Code Crazy</a>
 				</h1>
 				<div class='d-flex flew-row'>
-					<h2 class='nav-item'><a href='/signup'>Sign Up</a></h2>
-					<h2 class='nav-item'><a href='/login'>Login</a></h2>
-					<h2 class='nav-item'><btn id='log-out'>Log Out</btn></h2>
+					{{#if loggedIn}}
+						<h2 class='nav-item'><a href='/'>Homepage</a></h2>
+						<h2 class='nav-item'><a href='/dashboard'>dashboard</a></h2>
+						<h2 class='nav-item'><btn id='log-out'>Log Out</btn></h2>
+					{{else}}
+						<h2 class='nav-item'><a href='/signup'>Sign Up</a></h2>
+						<h2 class='nav-item'><a href='/login'>Login</a></h2>
+					{{/if}}
 				</div>
 			</div>
 		</header>
