--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -34,7 +34,9 @@
 		<main>
 			{{{body}}}
 		</main>
-		<script src='/javascript/logout.js'></script>
+		{{#if loggedIn}}
+			<script src='/javascript/logout.js'></script>
+		{{/if}}
 	</body>
 
 </html>
