created posts page

--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,5 +1,5 @@
 <div class='container'>
-	<div class='card bg- mt-3'>
+	<div class='card mt-3'>
 		<div class='card-body'>
 			<h2 class='card-title'><a href='/api/posts/{{id}}'>{{title}}</a></h2>
 			<p class='card-text'>{{post_text}}</p>
