--- a/views/create-post.handlebars
+++ b/views/create-post.handlebars
@@ -1,1 +1,13 @@
-<h1>Create a Post</h1>
+<h1>Create a New Post</h1>
+<form class='post-form'>
+	<div>
+		<label for='post-title'>Title</label>
+		<input type='text' id='post-title' />
+	</div>
+	<div>
+		<label for='post-text'>Text</label>
+		<textarea id='post-text'></textarea>
+	</div>
+	<button type='submit'>Create Post</button>
+</form>
+<script src='/javascript/newPost.js'></script>
