fixed date bugs

--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -5,7 +5,7 @@
 			<p class='card-text'>{{post_text}}</p>
 			<div class='card-text d-flex flex-row justify-content-end post-info'>
 				<p class='card-text post-created'>created on {{created_at}}</p>
-				<p class='card-text'><a href='/'>{{comments.length}}
+				<p class='card-text'><a href='/posts/{{id}}'>{{comments.length}}
 						comment(s)</a></p>
 			</div>
 		</div>
