--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -4,7 +4,7 @@
             <h2 class='card-title'>{{posts.title}}</h2>
             <p class='card-text'>{{posts.post_text}}</p>
             <div class='card-text d-flex flex-row justify-content-end post-info'>
-                <p class='card-text post-created'>created on {{posts.created_at}}</p>
+                <p class='card-text post-created'>created on {{posts.createdAt}}</p>
             </div>
         </div>
     </div>
