--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,12 +1,12 @@
-<form class='login-form'>
-	<div>
-		<label for='username-login'>username</label>
-		<input type='text' id='username-login' />
+<form class='login-form container m-3'>
+	<div class='mb-3'>
+		<label class='form-label' for='username-login'>Username</label>
+		<input class='form-control' type='text' id='username-login' />
 	</div>
-	<div>
-		<label for='password-login'>Password</label>
-		<input type='password' id='password-login' />
+	<div class='mb-3'>
+		<label class='form-label' for='password-login'>Password</label>
+		<input class='form-control' type='password' id='password-login' />
 	</div>
-	<button type='submit'>Log in</button>
+	<button class='btn btn-primary' type='submit'>Log in</button>
 </form>
 <script src='/javascript/login.js'></script>
