--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,16 +1,16 @@
-<form class='signup-form'>
-	<div>
-		<label for='username-signup'>Username</label>
-		<input type='text' id='username-signup' />
+<form class='signup-form container m-3'>
+	<div class='mb-3'>
+		<label class='form-label' for='username-signup'>Username</label>
+		<input class='form-control' type='text' id='username-signup' />
 	</div>
-	<div>
-		<label for='email-signup'>Email</label>
-		<input type='email' id='email-signup' />
+	<div class='mb-3'>
+		<label class='form-label' for='email-signup'>Email</label>
+		<input class='form-control' type='email' id='email-signup' />
 	</div>
-	<div>
-		<label for='password-signup'>Password</label>
-		<input type='password' id='password-signup' />
+	<div class='mb-3'>
+		<label class='form-label' for='password-signup'>Password</label>
+		<input class='form-control' type='password' id='password-signup' />
 	</div>
-	<button type='submit'>Sign Up</button>
+	<button class='btn btn-primary' type='submit'>Sign Up</button>
 </form>
 <script src='/javascript/signup.js'></script>
