--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,7 +22,7 @@
 				<div class='d-flex flew-row'>
 					{{#if loggedIn}}
 						<h2 class='nav-item'><a href='/'>Homepage</a></h2>
-						<h2 class='nav-item'><a href='/dashboard'>dashboard</a></h2>
+						<h2 class='nav-item'><a href='/dashboard'>Dashboard</a></h2>
 						<h2 class='nav-item'><btn id='log-out'>Log Out</btn></h2>
 					{{else}}
 						<h2 class='nav-item'><a href='/signup'>Sign Up</a></h2>
