--- a/views/partials/comment-info.handlebars
+++ b/views/partials/comment-info.handlebars
@@ -1,11 +1,12 @@
 <div class='container-fluid'>
-	<div class='card'>
+	<div class='card comment-card'>
 		<div class='card-body'>
 			<p class='card-text'>{{comment_text}}</p>
-			<p class='card-text'>created on
-				{{createdAt}}
-				by
-				{{user.username}}</p>
+			<p class='card-text'>
+				By
+				<span style='font-weight: bold;'>{{user.username}}</span>
+				on
+				{{createdAt}}</p>
 		</div>
 	</div>
 </div>
