--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,7 +1,9 @@
 <div class='container'>
 	<div class='card mt-3'>
 		<div class='card-body'>
-			<h2 class='card-title'><a href='/posts/{{id}}'>{{title}}</a></h2>
+			<h2 class='card-title post-title'><a
+					href='/posts/{{id}}'
+				>{{title}}</a></h2>
 			<p class='card-text'>{{post_text}}</p>
 			<div class='card-text d-flex flex-row justify-content-end post-info'>
 				<p class='card-text post-created'>created on {{created_at}}</p>
