--- a/views/create-post.handlebars
+++ b/views/create-post.handlebars
@@ -1,13 +1,15 @@
-<h1>Create a New Post</h1>
-<form class='post-form'>
-	<div>
-		<label for='post-title'>Title</label>
-		<input type='text' id='post-title' />
+<div class='container d-flex justify-content-center'>
+	<h1>Create a New Post</h1>
+</div>
+<form class='post-form container m-3'>
+	<div class='mb-3'>
+		<label class='form-label' for='post-title'>Title</label>
+		<input class='form-control' type='text' id='post-title' />
 	</div>
-	<div>
-		<label for='post-text'>Text</label>
-		<textarea id='post-text'></textarea>
+	<div class='mb-3'>
+		<label class='form-label' for='post-text'>Text</label>
+		<textarea class='form-control' id='post-text'></textarea>
 	</div>
-	<button type='submit'>Create Post</button>
+	<button class='btn btn-primary' type='submit'>Create Post</button>
 </form>
 <script src='/javascript/newPost.js'></script>
